# compile-time-xml

./: CLAUDE.md  CMakeLists.txt  Makefile  NOTICE  README.md  ctxml.cppm
examples/: CMakeLists.txt  Makefile  README.md  config.cpp  introspection.cpp  iteration.cpp  wellformed.cpp
include/: ctxml.hpp
include/ctlark/: compile.hpp
include/ctxml/: actions.hpp  bind.hpp  grammar.hpp  serialize.hpp  types.hpp  views.hpp  xml.gram  xml.hpp
single-header/: ctxml.hpp
tests/: CMakeLists.txt  cxx17.cpp  document.cpp
